# aws-serverless-react-template

./: .gitignore  Makefile  package-lock.json  package.json  pyproject.toml  serverless.yml
api/: api_doc.py  auth.py  config.py  foo.py  main.py  models.py  util.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx  main.jsx
ui/src/components/: Header.jsx  Main.jsx
