[tool.poetry]
name = "aws-serverless-react-template"
version = "0.1.0"
description = ""
authors = ["SarlosCainz <m-takuj@sarlos.jp>"]
readme = "README.md"
packages = [{include = "aws_serverless_react_template"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
mangum = "^0.17.0"
fastapi-utils = "^0.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
pydantic = {extras = ["email"], version = "^1.10.4"}
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
httpx = "^0.23.3"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

